Bug 778671: Fix two crashes in Telemetry. r=espindola